<resources>
    <string name="app_name">TicketToolbox</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fixbox">FixBox</string>
    <string name="fill_out_a_form_that_documents_packages_in_need_of_return_shipping_labels">fill out a form that documents packages in need of return shipping labels.</string>
    <string name="it_s_a_calendar_which_displays_tickets_that_require_return_shipping_labels_based_on_the_day_the_ticket_was_completed">It\'s a calendar which displays tickets that require return shipping labels based on the day the ticket was completed.</string>
    <string name="normal_note_taking_application">Normal note taking application</string>
    <string name="ticket_toolbox">Ticket Toolbox</string>
    <string name="hard_hat_logo_it_s_for_fun">hard hat logo. it\'s for fun.</string>
    <string name="tech_name">Tech Name</string>
    <string name="MODname">Manager Name</string>
    <string name="TicketNum">Ticket Number</string>
    <string name="DateSelection">Select Date</string>
    <string name="PartType">Part Type</string>
    <string name="button">Button</string>
    <string name="save">Save</string>
    <string name="hello">HELLO!!</string>
    <string name="filebox" />
    <string name="home">Home</string>
    <string name="modname">modName</string>
    <string name="ticketnum">ticketNum</string>
    <string name="parttype">partType</string>
    <string name="parttype2">partType</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <string name="to_return">To Return</string>
    <string name="which_part_would_you_like_to_return">Which part would you like to return?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="return_form">Return Form</string>
    <string name="todo12">TODO</string>
    <string name="return_parts_form">Return Parts Form</string>
    <string name="todo32">TODO</string>
    <string name="todo98">TODO</string>
    <string name="notes">Notes:</string>
    <string name="inventory">Inventory:</string>
    <string name="return_parts">Return Parts:</string>
    <string name="_37">37</string>
    <string name="add_note" />
    <string name="new_note" />
    <string name="to_do" />
    <string name="delete_all" />
    <string name="delete_all2" />
    <string name="to_do2" />
    <string name="title" />
    <string name="type_something_here" />
    <string name="date_modified" />
    <string name="date_created" />
    <string name="sort_a_to_z" />
    <string name="title_activity_notepad">Notepad</string>
    <string name="notesCap">NOTES</string>
    <string name="todo988">TODO</string>
    <string name="images">Images</string>
    <string name="imagescolon">Images:</string>
    <string name="refresh">refresh</string>
    <string name="date_created3">date_created3</string>
    <string name="date_modified1">date modified</string>
    <string name="date_created1">date created</string>
    <string name="img_name_here">img_name_here</string>
    <string name="imagescap">IMAGES</string>
    <string name="sort_a_to_z1">sort a to z</string>
    <string name="date_created2">date created</string>
    <string name="tech_name2">Tech Name</string>
    <string name="mod_name">Mod Name</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="mm_dd_yy">mm-dd-yy</string>
    <string name="datecolon">Date:</string>
    <string name="part_typecolon">Part Type:</string>
    <string name="ticket_numbercolon">Ticket Number:</string>
    <string name="tech_namecolon">Tech Name:</string>
    <string name="mod_namecolon">MOD Name:</string>
    <string name="tech_name3">Tech Name:</string>
    <string name="ticket_number3">Ticket Number:</string>
    <string name="ticket_details3">Ticket Details</string>
    <string name="mod_name3">Mod Name:</string>
    <string name="part_type3">Part Type:</string>
    <string name="creation_date3">Creation Date:</string>
    <string name="update">Update</string>
    <string name="home2">Home</string>
    <string name="templates">Templates</string>
    <string name="panera">Panera</string>
    <string name="applebee_s">Applebee\'s</string>
    <string name="todo45">TODO</string>
    <string name="todo56">TODO</string>
    <string name="welcome_message">Welcome to Ticket Toolbox!\n\n📅 Track parts!\n\n📝 Jot down notes.\n\n📊 Manage data forms.\n\n🖼️ View &amp; manage images.\n\n⭐ All of the essentials at your fingertips!\n\n</string>
    <string name="undo">Undo</string>
    <string name="todo8687">TODO</string>
    <string name="todo6547567">TODO</string>
    <string name="return_parts2">Return Parts</string>
    <string name="images2">Images</string>
    <string name="notepad">Notepad</string>
    <string name="return_form2">Return Form</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="home_icon">Home Icon</string>
    <string name="home345">Home</string>
    <string name="templates456345">Templates</string>
    <string name="serial_number">Serial Number</string>
    <string name="return_form1234562356">Return Form</string>
    <string name="toggle_inventory">Toggle Inventory</string>
    <string name="images324">Images</string>
    <string name="notepad234">Notepad</string>
    <string name="return_parts234">Return Parts</string>
</resources>