<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_forms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    tools:context=".activities.Forms">

    <!-- Main Content -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/TextFieldConstraintContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- App Title and Top Elements -->

            <TextView
                android:id="@+id/appTitleForms"
                android:layout_width="273dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/black_ops_one"
                android:gravity="center"
                android:text="@string/return_parts_form"
                android:textAlignment="center"
                android:textColor="#FAF6F6"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/formsHamburgerMenu"
                android:layout_width="54dp"
                android:layout_height="48dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="24dp"
                android:background="@color/transparent"
                android:contentDescription="@string/todo988"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appTitleForms"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/menu_white_32_32"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

            <Switch
                android:id="@+id/inventorySwitchForms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="131dp"
                android:minHeight="48dp"
                android:text="Toggle Inventory"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appTitleForms" />

            <TextView
                android:id="@+id/tv_pageDescription2"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/which_part_would_you_like_to_return"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inventorySwitchForms" />

            <!-- Text Fields -->

            <!-- ... (Keep the existing text fields here, no change needed) -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TechNameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="76dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="51dp"
                android:background="@drawable/roundedlinearlayout"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:helperText="required*"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/iconperson">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TechNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tech_name"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MODNameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="76dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="51dp"
                android:background="@drawable/roundedlinearlayout"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TechNameInput"
                app:startIconDrawable="@drawable/iconperson">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MODNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/MODname"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TicketNumInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="76dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="51dp"
                android:background="@drawable/roundedlinearlayout"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MODNameInput"
                app:startIconDrawable="@drawable/ic_ticket">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TicketNumEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TicketNum"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TrackingInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="76dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="51dp"
                android:background="@drawable/roundedlinearlayout"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TicketNumInput"
                app:startIconDrawable="@drawable/ic_ticket">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TrackingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tracking_number"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PartTypeInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="76dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="51dp"
                android:background="@drawable/roundedlinearlayout"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TrackingInput"
                app:startIconDrawable="@drawable/ic_parts1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PartTypeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PartType"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SelectDateInputContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="76dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="51dp"
                android:background="@drawable/roundedlinearlayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PartTypeInput"
                app:startIconDrawable="@drawable/ic_calendar">

                <!-- Date Selection and input -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DateSelectionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/DateSelection"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SerialNumberInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="308dp"
                android:layout_height="76dp"
                android:layout_marginStart="51dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="51dp"
                android:background="@drawable/roundedlinearlayout"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SelectDateInputContainer"
                app:startIconDrawable="@drawable/ic_ticket">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SerialNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/serial_number"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Save Button -->

            <Button
                android:id="@+id/formSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="161dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="162dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/save"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextFieldConstraintContainer"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
