<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteDialogConstLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/edit_notes_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

    </ScrollView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/noteTitleEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center"
        android:hint="@string/title"
        android:maxLength="24"
        android:minHeight="48dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_dateTime"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_lines"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitleEditText2" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/noteContentEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/type_something_here"
        android:minHeight="48dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF"
        android:textColorHint="#DAD3D3"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dateTime"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btn_editNotesBackNav"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:contentDescription="@string/to_do"
        android:src="@drawable/backarrow4"
        app:layout_constraintBottom_toTopOf="@+id/tv_dateTime"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>